--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "animejs": "^3.2.1",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
-    "got": "^11.8.1",
-    "http2": "^3.3.7",
+    "eva-icons": "^1.1.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
