--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "animejs": "^3.2.1",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "cheerio": "^1.0.0-rc.5",
     "d3": "^6.5.0",
     "eva-icons": "^1.1.3",
+    "js-cookie": "^2.2.1",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
