--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "js-cookie": "^2.2.1",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
+    "react-countup": "^4.3.3",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
