--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "tslib": "^2.6.2",
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
+  },
+  "dependencies": {
+    "animejs": "^3.2.2"
   }
 }
