--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tsconfig/svelte": "^5.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "sass": "^1.69.5",
     "storybook": "^7.6.6",
     "svelte": "^4.2.8",
     "svelte-check": "^3.6.2",
